# AMPLE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.ps1  compile.sh
.github/workflows/: ccpp-linux.yml  ccpp-macos.yml  ccpp-windows.yml  ccpp.yml
AMPLE-Assembler/: CMakeLists.txt
AMPLE-Assembler/include/: main.h
AMPLE-Assembler/src/: main.c
AMPLE-Core/: CMakeLists.txt
AMPLE-Core/include/: astdio.h
AMPLE-Core/src/: astdio.cpp
AMPLE-Runtime/: CMakeLists.txt
AMPLE-Runtime/include/: Metadata.h  Program.h
AMPLE-Runtime/include/opcodes/: Add.h  Hlt.h  Mov.h
AMPLE-Runtime/src/: Metadata.cpp  Program.cpp  main.cpp
AMPLE-Runtime/src/opcodes/: Hlt.c  Mov.c
Assembler/: CMakeLists.txt
Assembler/include/: AMPLE-Assembler.hpp  BinaryGen.h  FileAssembler.h  LineParser.h
Assembler/include/OPCODE HANDLERS/: OPCodeHandler.h  V2.h
Assembler/src/: BinaryGen.c  FileAssembler.cpp  LineParser.c  main.c  main.cpp
Assembler/src/OPCODE HANDLERS/V2/: ADD.c  AND.c  DIV.c  HALT.c  LSHIFT.c  MOD.c  MOV.c  MULT.c  NOT.c  OR.c  RSHIFT.c  SUB.c  V2.cpp  XOR.c
Assembler/src/OPCODE HANDLERS/V2/Mnemonics/: ADD.cpp  AND.cpp  CMPEQ.cpp  CMPGE.cpp  CMPGT.cpp  CMPLE.cpp  CMPLT.cpp  CMPNE.cpp  DIV.cpp  LSHIFT.cpp  MOD.cpp  MOV.cpp  MULT.cpp  NOT.cpp  OR.cpp  RSHIFT.cpp  SUB.cpp  XOR.cpp
Examples/Hello World/: Hello World.ample
Examples/Hello World Forever/: Hello World Forever.ample
Libraries/AMPLE/include/: AMPLE.h  Architecture Detection.h  EXPORT IMPORT.h  OS Detection.h
Libraries/Exceptions/: CMakeLists.txt
Libraries/Exceptions/include/: ArgumentException.h  ArgumentNullException.h  CorruptedProgramException.h  DllNotFoundException.h  FileNotFoundException.h  IOException.h  IndexOutOfRangeException.h  MissingMethodException.h  OutOfMemoryException.h  PathTooLongException.h  UnauthorizedAccessException.h
Libraries/Exceptions/src/: ArgumentException.cpp  ArgumentNullException.cpp  CorruptedProgramException.cpp  DllNotFoundException.cpp  FileNotFoundException.cpp  IOException.cpp  IndexOutOfRangeException.cpp  MissingMethodException.cpp  OutOfMemoryException.cpp  UnauthorizedAccessException.cpp
Libraries/IO/: CMakeLists.txt
Libraries/IO/include/: Directory.h  File.h  FileMode.h
Libraries/IO/src/: Directory.cpp  File.cpp
Libraries/Memory/: CMakeLists.txt
Libraries/Memory/include/: Memory.h  Register.h
Libraries/Memory/src/: Memory.c  Memory.cpp  Register.cpp
Packaging/pacman/: PKGBUILD
Runtime/: CMakeLists.txt
Runtime/include/: AMPLE.h  ArgumentProcessor.h  Execute.h  Execution.h  HandleOP.h  argProcessor.h  install.h  main.h  stdAMPLE.h.in
Runtime/include/OPCODE HANDLERS/: Instruction.h  V1.h  V2.h
Runtime/src/: ArgumentProcessor.c  Execute.c  Execution.c  HandleOP.c  argProcessor.c  install.c  main.c
Runtime/src/OPCODE HANDLERS/V1/: V1.c
Runtime/src/OPCODE HANDLERS/V1/OP_CODES/: ADD_V1.c  CHANGE_OP_VER_V1.c  CMP_V1.c  DIV_V1.c  HALT_V1.c  JMP_V1.c
Runtime/src/OPCODE HANDLERS/V2/: V2.c
Runtime/src/OPCODE HANDLERS/V2/OP_CODES/: ADD_V2.c  AND_V2.c  CALL_V2.c  CMPEQ_V2.c  CMPGE_V2.c  CMPGT_V2.c  CMPLE_V2.c  CMPLT_V2.c  CMPNE_V2.c  DIV_V2.c  HALT_V2.c  LSHIFT_V2.c  MOD_V2.c  MOV_V2.c  MULT_V2.c  NOT_V2.c  OR_V2.c  RET.c  RSHIFT_V2.c  SUB_V2.c  XOR_V2.c
Versions/: CMakeLists.txt
Versions/V1/: CMakeLists.txt
Versions/V1/include/: V1.h
Versions/V1/src/: V1.c  V1.md
Versions/V1/src/OP_CODES/: ADD_V1.c  DIV_V1.c  HALT_V1.c  JMP_V1.c  MOV_V1.c  MULT_V1.c  SUB_V1.c
Versions/V2/: CMakeLists.txt
Versions/V2/include/: V2.h
Versions/V2/src/: V2.c
Versions/V2/src/OP_CODES/: ADD_V2.c  AND_V2.c  CALL_V2.c  CMPEQ_V2.c  CMPGE_V2.c  CMPGT_V2.c  CMPLE_V2.c  CMPLT_V2.c  CMPNE_V2.c  DIV_V2.c  HALT_V2.c  LSHIFT_V2.c  MOD_V2.c  MOV_V2.c  MULT_V2.c  NOT_V2.c  OR_V2.c  RET.c  RSHIFT_V2.c  SUB_V2.c  XOR_V2.c
include/: HandleOP.h  Memory.h  Metadata.h  Program.h  argProcessor.h  main.h
include/OPCODE HANDLERS/: V1.h
lib/: CMakeLists.txt
lib/AMPLE/: CMakeLists.txt
lib/AMPLE/include/: AMPLE.h  Instruction.h
lib/AMPLE/src/: Environment.c
lib/IO/: CMakeLists.txt
lib/IO/include/: Directory.h  File.h  NFile.h  file.h
lib/IO/src/: Directory.c  File.c  NFile.c  file.c
lib/Utils/: CMakeLists.txt
lib/Utils/include/: ArgumentParser.h  CList.h  CStack.h  LibraryLoader.h  List.h  StringUtils.h
lib/Utils/src/: ArgumentParser.c  CList.c  CStack.c  LibraryLoader.c  List.c  StringUtils.c
src/: HandleOP.c  Memory.cpp  Metadata.cpp  Program.cpp  argProcessor.c  main.c  main.cpp
src/OPCODE HANDLERS/V1/: V1.c
src/OPCODE HANDLERS/V1/OP_CODES/: ADD_V1.c  CHANGE_OP_VER_V1.c  DIV.c  HALT_V1.c  JMP_V1.c  MOV_V1.c  MULT.c  MULT_V1.c  SUB_V1.c
tests/: test.sh
tests/test1/: test.asm
